--- a/app/src/main/res/layout-sw720dp/activity_list_tank_item.xml
+++ b/app/src/main/res/layout-sw720dp/activity_list_tank_item.xml
@@ -6,39 +6,43 @@
     <ImageView
         android:id="@+id/imageNationFlag"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:src="@drawable/fr"
-        android:layout_marginLeft="5dp"/>
+        android:minWidth="96px"
+        android:layout_marginLeft="5dp"
+        android:layout_centerVertical="true"/>
 
-    <TextView android:text="@string/nation" android:id="@+id/nation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="40dp">
-    </TextView>
+    <!--<TextView android:text="@string/nation" android:id="@+id/nation"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_marginLeft="40dp">-->
+    <!--</TextView>-->
 
     <ImageView
         android:id="@+id/imageGenreFlag"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:src="@drawable/genre_heavy"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="90dp"/>
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="100dp"/>
 
-    <TextView android:text="@string/genre" android:id="@+id/genre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="180dp">
-    </TextView>
+    <!--<TextView android:text="@string/genre" android:id="@+id/genre"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_marginLeft="180dp">-->
+    <!--</TextView>-->
 
     <TextView android:text="@string/nom" android:id="@+id/nom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textSize="20sp"
+        android:layout_centerVertical="true"
+        android:textSize="40sp"
         android:layout_marginLeft="250dp">
     </TextView>
 
@@ -47,16 +51,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="400dp">
+        android:layout_centerVertical="true"
+        android:textSize="40sp"
+        android:layout_marginLeft="650dp">
     </TextView>
 
     <ImageView
         android:id="@+id/imageTank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/default_tank"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="450dp"/>
-
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="750dp"/>
 
 </RelativeLayout>
