--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,53 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:weightSum="1">
+
+        <Button
+            android:layout_marginTop="50px"
+            android:layout_width="400px"
+            android:layout_height="80px"
+            android:text="Initialiser le hangar"
+            android:id="@+id/button1"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_marginTop="50px"
+            android:layout_width="400px"
+            android:layout_height="80px"
+            android:text="Allez au hangar"
+            android:id="@+id/button2"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_marginTop="50px"
+            android:layout_width="400px"
+            android:layout_height="80px"
+            android:text="Liste des équipes"
+            android:id="@+id/button3"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_marginTop="50px"
+            android:layout_width="400px"
+            android:layout_height="80px"
+            android:text="Nouvelle partie"
+            android:id="@+id/button4"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
 </RelativeLayout>
