--- a/app/src/main/res/menu/menu_list_tank.xml
+++ b/app/src/main/res/menu/menu_list_tank.xml
@@ -9,6 +9,11 @@
         app:icon="@drawable/smalladd"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_close_list"
+        android:title="@string/action_close"
+        android:orderInCategory="100"
+        app:icon="@drawable/smallclose"
+        app:showAsAction="ifRoom" />
 
 
 </menu>
