--- a/app/src/main/res/menu/menu_add_tank.xml
+++ b/app/src/main/res/menu/menu_add_tank.xml
@@ -7,7 +7,7 @@
     <item android:id="@+id/action_add_tank"
         android:title="@string/action_save"
         android:orderInCategory="100"
-        app:icon="@drawable/smalladd"
+        app:icon="@drawable/smallsave"
         app:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_close_tank"
