--- a/app/src/main/res/layout/activity_list_tank_item.xml
+++ b/app/src/main/res/layout/activity_list_tank_item.xml
@@ -10,36 +10,38 @@
         android:src="@drawable/fr"
         android:layout_marginLeft="5dp"/>
 
-    <TextView android:text="@string/nation" android:id="@+id/nation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="40dp">
-    </TextView>
+    <!--<TextView android:text="@string/nation" android:id="@+id/nation"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_marginLeft="40dp">-->
+    <!--</TextView>-->
 
     <ImageView
         android:id="@+id/imageGenreFlag"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:src="@drawable/genre_heavy"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="90dp"/>
+        android:layout_marginLeft="20dp"/>
 
-    <TextView android:text="@string/genre" android:id="@+id/genre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="180dp">
-    </TextView>
+    <!--<TextView android:text="@string/genre" android:id="@+id/genre"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_marginLeft="180dp">-->
+    <!--</TextView>-->
 
     <TextView android:text="@string/nom" android:id="@+id/nom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:textSize="20sp"
-        android:layout_marginLeft="250dp">
+        android:layout_marginLeft="110dp">
     </TextView>
 
 
@@ -47,8 +49,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:textSize="20sp"
-        android:layout_marginLeft="400dp">
+        android:layout_marginLeft="250dp">
     </TextView>
 
     <ImageView
