--- a/app/src/main/res/layout/activity_add_tank.xml
+++ b/app/src/main/res/layout/activity_add_tank.xml
@@ -16,21 +16,21 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_marginTop="50px"
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nation"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:id="@+id/textView"
-                android:layout_column="0" />
+                android:layout_column="0"
+                />
 
             <Spinner
-                android:layout_marginTop="50px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/spNation"
                 android:spinnerMode="dialog"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:layout_column="1"
                 android:layout_centerVertical="true"
                 />
@@ -41,23 +41,23 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_marginTop="50px"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nom"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:id="@+id/textView2"
                 android:layout_column="0" />
 
             <EditText
-                android:layout_marginTop="50px"
+                android:layout_marginTop="10dp"
                 android:id="@+id/editTextNom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/textView2"
                 android:layout_toRightOf="@+id/textView2"
                 android:ems="10"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:inputType="textCapWords" />
 
         </TableRow>
@@ -67,21 +67,21 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_marginTop="50px"
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/genre"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:id="@+id/textView3"
-                android:layout_column="0" />
+                android:layout_column="0"
+                />
 
             <Spinner
-                android:layout_marginTop="50px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/spGenre"
                 android:spinnerMode="dialog"
-                android:textSize="20px"
+                android:textSize="20sp"
                 android:layout_column="1"
                 android:layout_centerVertical="true"/>
         </TableRow>
@@ -91,23 +91,23 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_marginTop="50px"
+                android:layout_marginTop="10px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pv"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:id="@+id/textView4"
                 android:layout_column="0" />
 
             <EditText
-                android:layout_marginTop="50px"
+                android:layout_marginTop="10px"
                 android:id="@+id/editTextPv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/textView4"
                 android:layout_toRightOf="@+id/textView4"
                 android:ems="10"
-                android:textSize="30px"
+                android:textSize="20sp"
                 android:inputType="number" />
         </TableRow>
 
