--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -16,8 +16,9 @@
         android:layout_marginTop="2px"
         android:layout_toRightOf="@+id/left_pic"
         android:padding="3px"
-        android:textSize="22px"
-        android:textStyle="bold" />
+        android:textSize="30px"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
 
