--- a/app/src/main/res/layout-sw720dp/activity_add_equipe.xml
+++ b/app/src/main/res/layout-sw720dp/activity_add_equipe.xml
@@ -10,9 +10,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nom"
-            android:textSize="20sp"
-            android:id="@+id/textView2"
-            android:layout_column="0" />
+            android:textSize="30sp"
+            android:id="@+id/textView2"/>
 
         <EditText
             android:layout_marginTop="10dp"
@@ -22,7 +21,7 @@
             android:layout_alignBaseline="@+id/textView2"
             android:layout_toRightOf="@+id/textView2"
             android:ems="10"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:inputType="textCapWords" />
 
     <TableLayout
@@ -30,7 +29,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/editTextNom"
         android:layout_alignParentLeft="true"
-
+        android:layout_marginTop="5dp"
         android:id="@+id/tableLayout2">
 
         <TableRow
@@ -38,23 +37,23 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/viewText"
                 android:text="@string/tank_equipe"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:layout_column="0" />
 
             <Space
-                android:layout_width="5dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2" />
 
             <TextView
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:text="@string/title_activity_list_tank"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:id="@+id/viewText1"
                 android:layout_column="1" />
 
@@ -67,23 +66,25 @@
             android:layout_height="match_parent">
 
             <ListView
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/listViewEquipe"
                 android:layout_column="0" />
 
             <Space
-                android:layout_width="5dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2" />
 
             <ListView
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/listViewHangar"
                 android:layout_column="1" />
         </TableRow>
     </TableLayout>
+
+
 
 
 </RelativeLayout>
