--- a/app/src/main/res/layout/activity_battle_tank_item.xml
+++ b/app/src/main/res/layout/activity_battle_tank_item.xml
@@ -9,26 +9,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/fr"
-        android:layout_marginLeft="5dp"/>
-
-
+        android:layout_marginLeft="0dp"/>
 
     <ImageView
         android:id="@+id/imageGenreFlag"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:src="@drawable/genre_heavy"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/pvIncrease" />
-
-
+        android:layout_toRightOf="@+id/imageNationFlag" />
 
     <TextView android:text="@string/nom" android:id="@+id/nom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:layout_marginLeft="8dp"
-        android:layout_alignBottom="@+id/imageGenreFlag"
+        android:textSize="20sp"
+        android:layout_marginLeft="0dp"
         android:layout_toRightOf="@+id/imageGenreFlag"
         android:layout_alignWithParentIfMissing="false"
         android:layout_alignParentRight="false"
@@ -44,14 +39,16 @@
     <TextView android:text="@string/pv" android:id="@+id/pv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:layout_alignTop="@+id/pvIncrease"
-        android:layout_alignLeft="@+id/nom">
+        android:textSize="20sp"
+        android:layout_alignTop="@+id/butAdd"
+        android:layout_toRightOf="@+id/butAdd"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
     </TextView>
 
 
     <ImageButton
-        android:id="@+id/pvIncrease"
+        android:id="@+id/butAdd"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:scaleX="0.7"
@@ -59,11 +56,11 @@
         android:background="#00000000"
         android:contentDescription="+"
         android:src="@drawable/small_add"
-        android:layout_below="@+id/imageGenreFlag"
-        android:layout_toRightOf="@+id/imageNationFlag" />
+        android:layout_below="@+id/nom"
+        android:layout_toRightOf="@+id/imageGenreFlag" />
 
     <ImageButton
-        android:id="@+id/pvDecrease"
+        android:id="@+id/butRemove"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:scaleX="0.7"
@@ -72,6 +69,12 @@
         android:contentDescription="-"
         android:src="@drawable/small_remove"
         android:layout_alignTop="@+id/pv"
-        android:layout_toRightOf="@+id/nom" />
+        android:layout_toRightOf="@+id/pv" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/imageGenreFlag"
+        android:layout_toLeftOf="@+id/butRemove"></FrameLayout>
 
 </RelativeLayout>
