--- a/app/src/main/res/layout-sw720dp/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp/activity_main.xml
@@ -60,6 +60,17 @@
             android:textStyle="bold"
             android:layout_gravity="center_horizontal" />
 
+        <Button
+            android:layout_marginTop="50px"
+            android:layout_width="400px"
+            android:layout_height="80px"
+            android:text="Continuer la bataille"
+            android:id="@+id/button5"
+            android:textColor="@android:color/black"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 
 </RelativeLayout>
