--- a/app/src/main/res/layout/activity_list_tank_item.xml
+++ b/app/src/main/res/layout/activity_list_tank_item.xml
@@ -59,7 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="450dp"/>
+        android:layout_marginLeft="450dp"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
