--- a/app/src/main/res/menu/menu_bataille.xml
+++ b/app/src/main/res/menu/menu_bataille.xml
@@ -16,7 +16,7 @@
 
 
     <item android:id="@+id/action_close_bataille"
-        android:title="@string/action_delete"
+        android:title="@string/action_close_bataille"
         app:icon="@drawable/delete"
         app:showAsAction="ifRoom" />
 
