--- a/app/src/main/res/layout-sw720dp/activity_battle_tank_item.xml
+++ b/app/src/main/res/layout-sw720dp/activity_battle_tank_item.xml
@@ -73,6 +73,27 @@
         android:layout_alignTop="@+id/pv"
         android:layout_toRightOf="@+id/pv" />
 
+    <TextView android:text="@string/victoire" android:id="@+id/victoire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:layout_alignTop="@+id/butAdd"
+        android:layout_toRightOf="@+id/butRemove"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+    </TextView>
+
+
+    <ImageButton
+        android:id="@+id/butVictoire"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="#00000000"
+        android:contentDescription="-"
+        android:src="@drawable/small_victoire"
+        android:layout_alignTop="@+id/pv"
+        android:layout_toRightOf="@+id/victoire" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
